--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             .navbar, .transparent, .navbar-inverse, .navbar-inner {
                 background: rgba(0,0,0,0.3);
             }
+            .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+                color: #000; /*Sets the text hover color on navbar*/
+            }
 
             .bgimg {
                 background-image: url("https://i.imgur.com/FyRXvWn.jpg");
