--- a/admin.html
+++ b/admin.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<div class="jumbotron">
+<div class="jumbotron text-center">
   <h1>Admin</h1>
   <p>This will be a secret admin page</p>
 </div>
