--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </nav>
         </div>
         <div class="bgimg"></div>
-        <div class="middle">Coming soon...</div>
+        <div class="middle">Coming soon</div>
 
     </body>
 
