Update for iPhone scaling

--- a/admin.html
+++ b/admin.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html ng-app="myApp">
     <head>
-        <title>Church Demo</title>
+        <title>St Stephen's Church - Admin</title>
 
         <!-- meta data -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Cinzel|Josefin+Slab" rel="stylesheet">
@@ -62,10 +62,6 @@
         <style>
 
             body, html {
-                height: 100%;
-                width: 100%;
-                overflow: hidden;
-                position: fixed;
                 font-family: 'Josefin Slab', serif;
             }
             .navbar, .navbar-toggle {
@@ -106,11 +102,10 @@
                 color: white;
             }
             .footer{
-                position: absolute;
-                bottom: 1%;
+                height 5%;
             }
             .form-group{
-                height: 100px;
+                height: auto;
             }
             .buttons {
                 height: 25px;
@@ -150,7 +145,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container half">
             <div class="row">
                 <div class="col-sm-3">
                     <div class="form-group">
@@ -169,10 +164,10 @@
             </div>
         </div>
 
+        </div>
+    
         <div class="footer text-center">
             <p>Enter date and a message and select submit. This will update text in center</p>
-        </div>
-
         </div>
 
     </body>
