--- a/index.html
+++ b/index.html
@@ -1,18 +1,64 @@
 <!DOCTYPE html>
-<html>
-    <head lang="en">
-        <title>St Stephen's Church ... coming soon</title>
+<html ng-app="myApp">
+    <head>
+        <title>St Stephen's Church - Welcome</title>
+
+        <!-- meta data -->
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Cinzel|Josefin+Slab" rel="stylesheet">
+
+        <!-- AngularJS -->
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+        <!-- Firebase -->
+        <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+        <!-- AngularFire -->
+        <script src="https://cdn.firebase.com/libs/angularfire/1.1.2/angularfire.min.js"></script>
+        <!-- BootStrap -->
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <!-- jQuery library -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <!-- Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Cinzel|Josefin+Slab" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300" rel="stylesheet">
+
+        <!-- Angular app -->
+        <script>
+            var app = angular.module("myApp", ["firebase"]);
+
+            app.controller('RootCtrl', function($scope, $firebaseArray) {
+
+                /// Database Constant 
+                var dbURL = "https://ettonchurch.firebaseio.com/"
+
+                // Add message
+                $scope.addMessage = function() {
+                    var ref = new Firebase(dbURL);
+                    var message = $firebaseArray(ref);
+                    message.$add({
+                        date: $scope.message.date,
+                        text: $scope.message.text
+                    });
+                };
+
+                // View message
+                var message = new Firebase(dbURL);
+                $scope.message = $firebaseArray(message);
+
+                // Delete message
+                $scope.removeProduct = function(id) {
+                    var dref = new Firebase(dbURL + id);
+                    var product = $firebaseObject(dref)
+                    product.$remove();
+                };
+
+            });
+
+        </script>
+
         <style>
 
             body, html {
@@ -30,9 +76,6 @@
             .navbar, .transparent, .navbar-inverse, .navbar-inner {
                 background: rgba(0,0,0,0.3);
             }
-            .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-                color: #000; /*Sets the text hover color on navbar*/
-            }
 
             .bgimg {
                 background-image: url("https://i.imgur.com/FyRXvWn.jpg");
@@ -48,7 +91,7 @@
                 filter: blur(5px);
                 transform: scale(1.1);
             }
-            .middle {
+            .maintext {
                 font-size: 8vw;
                 position: absolute;
                 top: 50%;
@@ -57,37 +100,50 @@
                 text-align: center;
                 color: white;
             }
-
-            p {
-                background-color: red;
+            .footer{
+                position: absolute;
+                bottom: 1%;
+            }
+            .form-group{
+                height: 100px;
+            }
+            .buttons {
+                height: 25px;
+            }
+            .collapse {
+                visibility: collapse;
             }
 
             @media only screen and (max-width: 480px) {
-                p {
-                    background-color: blue;
-                }
                 .bgimg {
-                background-image: url("https://i.imgur.com/6JfEFSH.png");
-            }
+                    background-image: url("https://i.imgur.com/6JfEFSH.png");
+                }
 
 
         </style>
 
     </head>
 
-    <body>
+    <body ng-controller="RootCtrl">
+
         <div class="navbar transparent navbar-fixed-top">
             <nav class="navbar navbar-inverse navbar-fixed-top">
                 <div class="container-fluid">
                     <div class="navbar-header">
                         <a class="navbar-brand" href="#">St Stephen's Church</a>
                     </div>
+                    <ul class="nav navbar-nav navbar-right collapse">
+                        <li><a href="./admin"><span class="glyphicon glyphicon-user"></span> Admin </a></li>
+                    </ul>
                 </div>
             </nav>
         </div>
-        <div class="bgimg"></div>
-        <div class="middle">Coming soon</div>
+
+        <div class="jumbotron text-center bgimg blur"></div>
+        
+        <div ng-repeat="message in message | limitTo : -1">
+            <div class="maintext">{{message.text}}</div>     
+        </div>
 
     </body>
-
 </html>
