Link to home after submit

--- a/admin.html
+++ b/admin.html
@@ -160,7 +160,7 @@
                 </div>
             </div>
             <div class="buttons">
-                <button type="button" class="btn btn-success btn-block" onclick="location.href='/index.html';" ng-click="addMessage()">Submit</button>
+                <button type="button" class="btn btn-success btn-block" onclick="location.href='http://ettonchurch.co.uk';" ng-click="addMessage()">Submit</button>
             </div>
         </div>
 
